# agent-observability-operator

./: .gitignore  CLAUDE.md  HYBRID_SOLUTION_DESIGN.md  Makefile  README.md  SWAP_MECHANISM_RESEARCH.md
core/: README.md
core/custom-python-image/: Dockerfile  README.md  requirements.txt
custom-python-image/: Dockerfile  README.md  requirements.txt
demo-apps/: README.md  requirements.txt
docs/: ARCHITECTURE.md  CLAUDE.md  CONFIGURATION.md  PLUGIN_DEVELOPMENT.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
examples/: README.md
manifests/: README.md
operator/: Dockerfile  README.md  go.mod  main.go
runtime-coordinator/: README.md  pyproject.toml
runtime-coordinator/agent_obs_runtime/: __init__.py  actuation.py  bootstrap.py  config.py  detection.py  diagnostics.py  instrumentation.py  langchain_langgraph_instrumentation.py  mcp_instrumentation.py  mode.py  ownership.py  ownership_wrappers.py  plan.py
runtime-coordinator/agent_obs_runtime/plugins/: __init__.py  openai.py  registry.py  requests.py
runtime-coordinator/agent_obs_runtime/plugins/common/: __init__.py  ownership.py  wrapper_utils.py
runtime-coordinator/src/runtime_coordinator/: __init__.py  main.py
runtime-coordinator/tests/: test_runtime_coordinator.py
scripts/: README.md  apply-sample-crs.sh  build-images.sh  check-operator-local.sh  clean.sh  demo.sh  deploy-demo-apps.sh  deploy-operator.sh  deploy.sh  generate-plugin-fields.sh  generate-requirements.py  install-collector.sh  install-deps.sh  install-jaeger.sh  load-images-kind.sh  send-demo-traffic.sh  verify-demo.sh
(+145 files in other folders)
